--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-click==8.0.3
-Flask==2.0.2
-importlib-metadata==4.8.1
-itsdangerous==2.0.1
-Jinja2==3.0.2
-MarkupSafe==2.0.1
-pkg-resources==0.0.0
-typing-extensions==3.10.0.2
-waitress==2.0.0
-Werkzeug==2.0.2
-zipp==3.6.0
+click==8.0.4
+Flask==2.0.3
+gunicorn==20.1.0
+itsdangerous==2.1.0
+Jinja2==3.0.3
+MarkupSafe==2.1.0
+Werkzeug==2.0.3
